<resources>
    <string name="app_name">Twittegorize</string>
    <string name="action_settings">Settings</string>
    <string name="text_created_by">by Owen Peterson</string>
    <string name="text_inform_auth">Please click the login button to log into Twitter!</string>
    <string name="text_button_login">Log In To Twitter</string>
    <string name="title_activity_category_view_selector">Twittegorize</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="text_category_default_feed">All Tweets</string>
    <string name="text_category_help">Help</string>
    <string name="action_refresh">Refresh</string>
    <string name="text_logout">Log Out</string>
    <string name="title_activity_category_manager_view">Category Manager</string>

    <string name="text_category_manager">Manage Categories</string>
    <string name="text_create_category">Create a new category by entering the category name</string>
    <string name="text_title_create">Create Category</string>
    <string name="text_button_add_category">Add New Category</string>
    <string name="text_title_delete">Delete Category</string>
    <string name="text_delete_category">Select the category that you wish to delete</string>
    <string name="text_button_delete_category">Delete This Category</string>
    <string name="text_title_modify_users">Add or Delete Users</string>
    <string name="text_modify_users">Select a category to add or delete users from that category</string>
    <string name="title_activity_category_user_view">Add/Remove Users</string>
    <string name="text_button_manage_category">Add/Remove Users</string>
    <string name="title_activity_tweet_details">Details</string>
    <string name="fake_body">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et ma</string>
    <string name="text_button_reply">Reply</string>
    <string name="text_button_external">View On Twitter</string>
    <string name="text_title_entities">Items Associated With This Tweet</string>
    <string name="text_title_urls">Links</string>
    <string name="text_title_images">Images</string>
    <string name="title_activity_settings">Settings</string>
    <string name="text_setting_dark_theme">Use Dark Theme</string>
    <string name="text_setting_always_logout">Always Log Out</string>
    <string name="text_setting_desc_always_logout">Always log out when the application is closed</string>
    <string name="text_setting_default_category">Default Category Selection</string>
    <string name="text_setting_desc_default_category">Choose which category is default when the app opens</string>
    <string name="text_no_connection">No internet connection available. Please check your network settings.</string>
    <string name="text_setting_open_twitter_default">Go To Twitter</string>
    <string name="text_setting_desc_open_twitter_default">When clicking a tweet in the list, go to directly to Twitter</string>
    <string name="text_retweeted">Retweeted</string>

</resources>
