<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="ca.owenpeterson.twittegorize.views.activities.CategoryManagerView">

        <LinearLayout
            android:id="@+id/pane_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/text_title_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:text="@string/text_create_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/input_category_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/button_add_category"
                android:text="@string/text_button_add_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/pane_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/pane_create">

            <TextView
                android:text="@string/text_title_modify_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:text="@string/text_modify_users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner_categories_user_management"
                android:layout_width="200dp"
                android:layout_height="wrap_content"></Spinner>

            <Button
                android:id="@+id/button_manage_category_users"
                android:text="@string/text_button_manage_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/pane_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/pane_modify">

            <TextView
                android:text="@string/text_title_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:text="@string/text_delete_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner_categories"
                android:layout_width="200dp"
                android:layout_height="wrap_content"></Spinner>

            <Button
                android:id="@+id/button_delete_category"
                android:text="@string/text_button_delete_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>