<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ca.owenpeterson.twittegorize.views.activities.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dark_theme"
                android:text="@string/text_setting_dark_theme"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:layout_marginBottom="10dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_toRightOf="@+id/dark_theme">

                <Switch
                    android:id="@+id/switch_theme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/always_logout"
                android:text="@string/text_setting_always_logout"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/text_setting_desc_always_logout"
                android:layout_below="@+id/always_logout"
                android:textSize="10sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_toRightOf="@+id/always_logout">

                <Switch
                    android:id="@+id/switch_logout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/default_category"
                android:text="@string/text_setting_default_category"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/text_setting_desc_default_category"
                android:layout_below="@+id/default_category"
                android:textSize="10sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_toRightOf="@+id/default_category">

                <Spinner
                    android:id="@+id/spinner_categories_settings"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true">

                </Spinner>

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
